--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   get: ^4.1.4
   mask_text_input_formatter: ^1.2.1
   pinput: ^0.2.0
+  image_picker: ^0.8.0+3
 
 dev_dependencies:
   flutter_test:
