--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,10 @@ dependencies:
   pinput: ^0.2.0
   image_picker: ^0.8.0+3
   flutter_facebook_login: ^3.0.0
-
+  firebase_auth: ^2.0.0
+  cloud_firestore: ^2.3.0
+  firebase_core: ^1.3.0
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
