--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_auth: ^2.0.0
   cloud_firestore: ^2.3.0
   firebase_core: ^1.3.0
+  google_maps_flutter: ^2.0.6
   
 dev_dependencies:
   flutter_test:
