--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cloud_firestore: ^2.3.0
   firebase_core: ^1.3.0
   google_maps_flutter: ^2.0.6
+  google_sign_in: ^5.0.4
   
 dev_dependencies:
   flutter_test:
